crates/smip_proc_macros/tests/ui-fail/method-extra-args.stderr
error: method should have exactly one arguments
 --> tests/ui-fail/method-extra-args.rs:9:38
  |
9 |     fn method_with_more_than_one_arg(&self, arg1: u32, arg2: String) {}
  |                                      ^
